# ez-trader

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/workflows/: daily_trading_cycle.md
data/portfolio/: trades.csv
diary/: 2025-11-20.md  2025-11-21.md  2025-11-24.md  2025-11-25_weekly_thesis.md
docs/: initial-prompt.md  massive-api.md
memos/: 2025-11-20_framework.md
memos/archive/: 2025-11-20_AMD_BUY.md  2025-11-21_HOOD_SELL.md  2025-11-23_AAP_BUY.md  2025-11-23_ABNB_BUY.md  2025-11-23_AMC_BUY.md  2025-11-23_TXN_BUY.md  2025-11-24_AAPL_BUY.md
pocs/: test_polygon_api.py
reports/: daily_report_2025-11-20.md  daily_report_2025-11-21.md  market_scan.csv  market_scan.txt  market_snapshot.json  systematic_universe.csv
scripts/: approve_trades.py  check_aapl.py  check_nflx.py  check_nflx_split.py  check_nvda.py  check_splits.py  clear_cache.py  debug_cvna.py  debug_missed_signals.py  debug_mstr.py  debug_sq.py  debug_yf.py  debug_yfinance.py  demo_screener.py  execute_trades.py  final_verification.py  force_mstr_trade.py  generate_sample_memo.py  market_scan.py  repro_name_error.py  research_iv.py  research_universe.py  run_aggressive.py  run_backtest.py  run_daily.py  run_data_snapshot.py  run_macro_scan.py  run_systematic_scan.py  simple_screener_test.py  test_aapl.py  test_data_fields.py  test_parallel_fix.py  test_polygon_screener.py  test_process_pool.py  test_redis.py  test_yahoo_screener.py  track_portfolio.py  verify_cvna.py  verify_data.py  verify_ticker.py
tweets/: 2025-11-21_tweets.md
(+36 files in other folders)
