[tool.poetry]
name = "ez-stocks"
version = "0.1.0"
description = ""
authors = ["jdorado <juancamilo.dorado@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
